Replace string encoding identities with a typed Encoding enum
Assisted-by: codex:gpt-5.6-sol